Agregando animaciones para la presentación

--- a/index.html
+++ b/index.html
@@ -77,20 +77,22 @@
         <section>
             <div class="presentacion contenedor mb-4">
                 <!-- Texto de presentación e iconos de redes sociales-->
-                <div class="presentacionInfo">
+                <div class="presentacionInfo stretchRight">
                     <h1>¡Hola! Me llamo Nahuel y soy Desarrollador Front-end</h1>
                     <p class="fs-3 lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, tenetur deserunt
                         reiciendis dolore quibusdam consectetur maiores voluptates numquam in asperiores incidunt illo
                         quaerat expedita vel, harum earum aliquam repellat adipisci.</p>
                     <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2">
-                        <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoRedesSociales">
+                        <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoRedesSociales trans
+                        trans">
                     </a>
                     <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2">
-                        <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoRedesSociales">
+                        <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoRedesSociales trans
+                        trans">
                     </a>
                 </div>
                 <!-- foto de perfil y presentación destacada debajo-->
-                <div class="foto text-center mb-2">
+                <div class="foto text-center mb-2 fadeIn">
                     <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                     <p class="nombre">Nahuel Lopez</p>
                     <p class="nombre">Front-end Developer</p>
