trabajando en la sección sobre mí

--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
             <div class="presentacion contenedor mb-4">
                 <!-- Texto de presentación e iconos de redes sociales-->
                 <div class="presentacionInfo stretchRight">
-                    <h1>¡Hola! Me llamo Nahuel y soy Desarrollador Front-end</h1>
-                    <p class="fs-3 lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, tenetur deserunt
-                        reiciendis dolore quibusdam consectetur maiores voluptates numquam in asperiores incidunt illo
-                        quaerat expedita vel, harum earum aliquam repellat adipisci.</p>
+                    <h1 class="display-2">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
+                    <p class="fs-3 lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
                     <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2">
                         <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoRedesSociales trans
                         trans">
@@ -106,20 +104,13 @@
             <h2 class="titulo fs-1 mt-4">Sobre mí</h2>
             <div class="contenedor sobreMi">
                 <div class="sobreMiTexto">
-                    <p class="resumen">Hi there! my name is Nahuel and I am a Front-end developer and math teacher.
-                        I live in Argentina (Bs. As.), and I'm studying full stack web development to change careers
-                        and dedicate myself fully to programming.</p>
-                    <p class="resumen">I found in web programming a window to many things that fascinate me, such as
-                        working in a team and solving challenges that put my ingenuity and creativity to the test.
-                        At this moment, I am looking to be part of a company in which I can pour all my knowledge
-                        and allow me to continue training to be a better programmer every day.</p>
-                    <p class="resumen">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam nulla tempore
-                        esse exercitationem dolorum saepe culpa sapiente delectus? Culpa pariatur, rerum harum
-                        consequuntur mollitia distinctio ad recusandae consequatur dolores quas?</p>
+                    <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
+                    <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
+                    <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo siempre en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
                     <h3 class="habilidades">Hobbies:</h3>
-                    <p class="resumen">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam nulla tempore
-                        esse exercitationem dolorum saepe culpa sapiente delectus? Culpa pariatur, rerum harum
-                        consequuntur mollitia distinctio ad recusandae consequatur dolores quas?</p>
+                    <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, bioqúimica, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
+                    <p class="resumen">Además, en mis tiempos libres le dedico tiempo a mi perro Tilo, y juego con él, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
+                    <p class="resumen">Me gusta el cine y mirar películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
                 </div>
             </div>
         </section>
