agregando información en la sección sobre mí

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, bioqúimica, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
                     <p class="resumen">Además, en mis tiempos libres le dedico tiempo a mi perro Tilo, y juego con él, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
                     <p class="resumen">Me gusta el cine y mirar películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
+                    <p class="resumen">Me gusta entrenar, sobre todo los entrenamientos de fuerza, pero también me gusta salir a correr, porque me despeja.</p>
                 </div>
             </div>
         </section>
