agregando imágenes y el icono de pdf a la presentación

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                         <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoRedesSociales trans
                         trans">
                     </a>
+                    <a href="#" target="_blank" class="m-2">
+                        <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoRedesSociales trans
+                        trans">
+                    </a>
                 </div>
                 <!-- foto de perfil y presentación destacada debajo-->
                 <div class="foto text-center mb-2 fadeIn">
