agregando imágenes y estilos a la sección de skills

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
                     <h1 class="display-2">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
                     <p class="fs-3 lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
                     <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2">
-                        <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoRedesSociales trans
+                        <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion trans
                         trans">
                     </a>
                     <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2">
-                        <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoRedesSociales trans
+                        <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
                         trans">
                     </a>
                     <a href="#" target="_blank" class="m-2">
-                        <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoRedesSociales trans
+                        <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
                         trans">
                     </a>
                 </div>
@@ -128,6 +128,41 @@
                 <p class="habilidades fs-4 m-3">Technical skills:</p>
                 <p class="habilidades fs-5 m-3">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React
                     - Firebase - Node.js</p>
+                <div class="cajaSkills">
+                    <div>
+                        <img src="img/git-alt-brands.svg" class="iconoSkill iconoSkillGit" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/github-brands.svg" class="iconoSkill iconoSkillGitHub" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/HTML5.svg" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/css3.svg" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/icons8-bootstrap.png" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/sass.svg" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/javascript.svg" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/react.svg" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/firebase.svg" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/nodejs.svg" class="iconoSkill" alt="imagen de HTML5">
+                    </div>    
+                    <div>
+                        <img src="img/database-solid.svg" class="iconoSkill iconoSkillDataBase" alt="imagen de HTML5">
+                    </div>    
+                </div>    
             </div>
             <div class="contenedor">
                 <p class="habilidades fs-4 m-3">Soft skills:</p>
