trabajando en el index con los textos y los iconos

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="contenedor">
                 <p class="habilidades fs-4 m-3">Technical skills:</p>
                 <p class="habilidades fs-5 m-3">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React
-                    - Firebase - Node.js</p>
+                    - Firebase</p>
                 <div class="cajaSkills">
                     <div>
                         <img src="img/git-alt-brands.svg" class="iconoSkill iconoSkillGit" alt="imagen de HTML5">
@@ -156,12 +156,12 @@
                     <div>
                         <img src="img/firebase.svg" class="iconoSkill" alt="imagen de HTML5">
                     </div>    
-                    <div>
+                    <!-- <div>
                         <img src="img/nodejs.svg" class="iconoSkill" alt="imagen de HTML5">
                     </div>    
                     <div>
                         <img src="img/database-solid.svg" class="iconoSkill iconoSkillDataBase" alt="imagen de HTML5">
-                    </div>    
+                    </div>     -->
                 </div>    
             </div>
             <div class="contenedor">
