trabajando en la sección de skills

--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
             </div>
             <div class="contenedor">
                 <p class="habilidades fs-4 m-3">Soft skills:</p>
-                <p class="habilidades fs-5 m-3">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React
-                    - Firebase - Node.js</p>
+                <p class="habilidades fs-5 m-3">Resiliencia, liderazgo, proactividad, autonomía, trabajo en equipo, responsabilidad, entusiasmo</p>
             </div>
         </section>
         <!-- Fin de la sección de skills -->
