--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                             <a class="nav-link m-2 hoverMenu" href="#about">Sobre mí</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#about">Skills</a>
+                            <a class="nav-link m-2 hoverMenu" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#about">Formación</a>
+                            <a class="nav-link m-2 hoverMenu" href="#formacion">Formación</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#proyectos">Proyectos</a>
+                            <a class="nav-link m-2 hoverMenu" href="#trabajos">Proyectos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link m-2 hoverMenu" href="#contact">Contacto</a>
@@ -80,22 +80,27 @@
                 <div class="presentacionInfo stretchRight">
                     <h1 class="display-2">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
                     <p class="fs-3 lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
-                    <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2">
-                        <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion trans
-                        trans">
-                    </a>
-                    <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2">
-                        <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
-                        trans">
-                    </a>
-                    <a href="#" target="_blank" class="m-2">
-                        <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
-                        trans">
-                    </a>
+                    <div class="cajaIconosPresentacion">
+                        <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
+                            <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion trans
+                            trans">
+                            <p class="nombreIcono lead">LinkedIn</p>
+                        </a>
+                        <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-3 text-decoration-none">
+                            <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
+                            trans">
+                            <p class="nombreIcono lead">GitHub</p>
+                        </a>
+                        <a href="#" target="_blank" class="m-3 text-decoration-none">
+                            <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
+                            trans">
+                            <p class="nombreIcono lead">Mi CV</p>
+                        </a>
+                    </div>
                 </div>
                 <!-- foto de perfil y presentación destacada debajo-->
                 <div class="foto text-center mb-2 fadeIn">
-                    <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
+                    <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                     <p class="nombre">Nahuel Lopez</p>
                     <p class="nombre">Front-end Developer</p>
                 </div>
@@ -105,7 +110,7 @@
 
         <!-- Sección acerca de mí -->
         <section>
-            <h2 class="titulo fs-1 mt-4">Sobre mí</h2>
+            <h2 id="about" class="titulo fs-1 mt-4">Sobre mí</h2>
             <div class="contenedor sobreMi">
                 <div class="sobreMiTexto">
                     <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
@@ -123,38 +128,47 @@
 
         <!-- Sección de skills (habilidades técnicas y blandas)-->
         <section>
-            <h2 class="titulo fs-1 mt-4">Skills</h2>
+            <h2 id="skills" class="titulo fs-1 mt-4">Skills</h2>
             <div class="contenedor">
                 <p class="habilidades fs-4 m-3">Technical skills:</p>
-                <p class="habilidades fs-5 m-3">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React
-                    - Firebase</p>
+                <!-- <p class="habilidades fs-5 m-3">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React
+                    - Firebase</p> -->
                 <div class="cajaSkills">
                     <div>
                         <img src="img/git-alt-brands.svg" class="iconoSkill iconoSkillGit" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Git</p>
                     </div>    
                     <div>
                         <img src="img/github-brands.svg" class="iconoSkill iconoSkillGitHub" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">GitHub</p>
                     </div>    
                     <div>
                         <img src="img/HTML5.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">HTML5</p>
                     </div>    
                     <div>
                         <img src="img/css3.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">CSS3</p>
                     </div>    
                     <div>
                         <img src="img/icons8-bootstrap.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Bootstrap</p>
                     </div>    
                     <div>
                         <img src="img/sass.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">SASS</p>
                     </div>    
                     <div>
                         <img src="img/javascript.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">JavaScript</p>
                     </div>    
                     <div>
                         <img src="img/react.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">React</p>
                     </div>    
                     <div>
                         <img src="img/firebase.svg" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Firebase</p>
                     </div>    
                     <!-- <div>
                         <img src="img/nodejs.svg" class="iconoSkill" alt="imagen de HTML5">
@@ -171,9 +185,18 @@
         </section>
         <!-- Fin de la sección de skills -->
 
+        <!-- Sección de formación -->
+        <section>
+            <h2 id="formacion" class="titulo fs-1">Formación</h2>
+            <div class="contenedor formacionTexto">
+                <p class="resumen">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur nulla dolorum eligendi obcaecati saepe, possimus temporibus asperiores laboriosam ea doloremque commodi necessitatibus! Veritatis, ipsum libero sint quo porro blanditiis ad?</p>
+            </div>
+        </section>
+        <!-- Fin de la sección de formación -->
+
         <!-- Sección sobre los proyectos destacados -->
         <section>
-            <h2 class="titulo fs-1">Proyectos</h2>
+            <h2 id="trabajos" class="titulo fs-1">Proyectos</h2>
             <div class="container">
                 <div id="proyectos" class="mt-4">
                     <article id="proyectoCoderhouse" class="proyecto trans">
@@ -262,9 +285,9 @@
 
         <!-- Sección de contacto-->
         <section>
-            <h2 class="titulo fs-1 mt-5">Contact</h2>
+            <h2 id="contact" class="titulo fs-1 mt-5">Contact</h2>
             <!-- <h3 class="text-center text-dark">My email: nahuel.developer1@gmail.com</h3> -->
-            <form id="contact" class="container cajaFormulario bg-light mt-5 mb-5">
+            <form class="container cajaFormulario bg-light mt-5 mb-5">
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="first_name"></label>
